--- a/styles.css
+++ b/styles.css
@@ -22,41 +22,44 @@ main {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+.products.no-show{
+    display: none;
+}
+.product {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid #ccc;
+    margin: 10px;
+    width: 300px;
+    background-color: white;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1),
+      inset 0 -3px 3px rgba(0, 0, 0, 0.1);
+  }
+
+  .img-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 60%;
+    align-items: center;
+  }
+
+  .img-container > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    /* justify-content: center; */
+  }
+
 .details-container {
   text-align: center;
 }
-.img-conatiner {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 60%;
-  align-items: center;
-}
-.img-conatiner > img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  /* justify-content: center; */
-}
-.product {
-  /* new added  */
-  /* display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around; */
 
-  border: 1px solid #ccc;
 
-  margin: 10px;
-  width: 300px;
-  background-color: white;
-  width: 300px;
-  height: 150px;
-  background-color: #f0f0f0;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.1),
-    inset 0 -3px 3px rgba(0, 0, 0, 0.1);
-}
 
 .cart {
   display: none;
